add git status to debug version test
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -226,6 +226,7 @@ jobs:
           cd deps/finch-core && make clean
       - name: Build project
         run: |
+          git status
           make
       - name: Run e2e tests
         run: |
