--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -58,6 +58,19 @@ jobs:
     runs-on: ${{ matrix.os }} 
     steps:
       - run: echo "Skipping CI for docs & contrib files"
+  windows-e2e-tests:
+      strategy:
+        matrix:
+          os: 
+            [
+              [self-hosted, macos, amd64, 13, test], 
+              [self-hosted, macos, amd64, 14, test], 
+              [self-hosted, macos, arm64, 13, test], 
+              [self-hosted, macos, arm64, 14, test]
+            ]
+      runs-on: ${{ matrix.os }} 
+      steps:
+        - run: echo "Skipping CI for docs & contrib files"
   mdlint:
     runs-on: ubuntu-latest
     steps:
