--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -119,7 +119,7 @@ jobs:
           go-version-file: go.mod
           cache: true
       - run: make check-licenses
-  e2e-tests:
+  mac-vm-e2e-tests:
     strategy:
       fail-fast: false
       matrix:
@@ -129,6 +129,11 @@ jobs:
             [self-hosted, macos, amd64, 14, test],
             [self-hosted, macos, arm64, 13, test],
             [self-hosted, macos, arm64, 14, test]
+          ]
+        test-command:
+          [
+            "test-e2e-vm-serial",
+            "test-e2e-container"
           ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -173,7 +178,7 @@ jobs:
       - run: |
           git status
           git clean -f -d
-          REGISTRY=${{ steps.vars.outputs.has_creds == true && env.REGISTRY || '' }} make test-e2e
+          REGISTRY=${{ steps.vars.outputs.has_creds == true && env.REGISTRY || '' }} make ${{ matrix.test-command }}
         shell: zsh {0}
   windows-e2e-tests:
     strategy:
@@ -183,6 +188,11 @@ jobs:
           [
             [self-hosted, windows, amd64, test],
           ]
+        test-command:
+          [
+            "test-e2e-vm-serial",
+            "test-e2e-container"
+          ]  
     runs-on: ${{ matrix.os }}
     timeout-minutes: 180
     steps:
@@ -239,7 +249,7 @@ jobs:
           
           git status
           git clean -f -d
-          make test-e2e
+          make ${{ matrix.test-command }}
       - name: Remove Finch VM and Clean Up Previous Environment
         if: ${{ always() }}
         run: |
