set test name back to what it was originally
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -119,7 +119,7 @@ jobs:
           go-version-file: go.mod
           cache: true
       - run: make check-licenses
-  mac-vm-e2e-tests:
+  e2e-tests:
     strategy:
       fail-fast: false
       matrix:
