pipe GitHub debug flag into e2e tests
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,9 @@ permissions:
   id-token: write
   contents: write
 
+env:
+  DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG }}
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
