ci: make tests more reliable and debuggable (#759)
Issue #, if available: The most common case for macOS tests failing
seems to be vm init or vm start failing (or, partially failing), see:
https://github.com/runfinch/finch/actions/runs/7493200344/job/20398390952,
https://github.com/runfinch/finch/actions/runs/7493150724/job/20398225275,
https://github.com/runfinch/finch/actions/runs/7493910137/job/20400678411

*Description of changes:*
- Adds a delay between vm state changes. I'm not sure if this will fix
the issue, but its worth a try

*Testing done:*



- [x] I've reviewed the guidance in CONTRIBUTING.md


#### License Acceptance

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.

---------

Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/ci-docs.yaml
+++ b/.github/workflows/ci-docs.yaml
@@ -48,14 +48,22 @@ jobs:
   e2e-tests:
     strategy:
       matrix:
-        os: 
+        os:
           [
-            [self-hosted, macos, amd64, 13, test], 
-            [self-hosted, macos, amd64, 14, test], 
-            [self-hosted, macos, arm64, 13, test], 
-            [self-hosted, macos, arm64, 14, test]
+            [self-hosted, macos, amd64, 13, test],
+            [self-hosted, macos, amd64, 14, test],
+            [self-hosted, macos, arm64, 13, test],
+            [self-hosted, macos, arm64, 14, test],
           ]
-    runs-on: ${{ matrix.os }} 
+    runs-on: ${{ matrix.os }}
+    steps:
+      - run: echo "Skipping CI for docs & contrib files"
+  windows-e2e-tests:
+    strategy:
+      matrix:
+        os: [[self-hosted, windows, amd64, test]]
+        test-command: ['test-e2e-vm-serial', 'test-e2e-container']
+    runs-on: ${{ matrix.os }}
     steps:
       - run: echo "Skipping CI for docs & contrib files"
   mdlint:
