fix: add force to cni cleanup on boot service
Signed-off-by: Olly Pomeroy <opomer@amazon.co.uk>

--- a/finch.windows.yaml
+++ b/finch.windows.yaml
@@ -102,7 +102,7 @@ provision:
     sudo systemctl enable --now finch-sync-on-shutdown.service
 
     # Add a new service that cleans up lingering CNI networks on boot
-    printf '[Unit]\nDescription=Delete hanging data on boot\nDefaultDependencies=no\nBefore=basic.target\n\n[Service]\nType=oneshot\nExecStart=/bin/bash -c "sudo rm /var/lib/cni/networks/bridge/**; sudo rm /var/lib/cni/results/bridge-finch-*"\n\n[Install]\nWantedBy=basic.target\n' | sudo tee /usr/local/lib/systemd/system/finch-cleanup-on-boot.service
+    printf '[Unit]\nDescription=Delete hanging data on boot\nDefaultDependencies=no\nBefore=basic.target\n\n[Service]\nType=oneshot\nExecStart=/bin/bash -c "sudo rm -rf /var/lib/cni/networks/bridge/**; sudo rm -rf /var/lib/cni/results/bridge-finch-*"\n\n[Install]\nWantedBy=basic.target\n' | sudo tee /usr/local/lib/systemd/system/finch-cleanup-on-boot.service
     sudo systemctl enable --now finch-cleanup-on-boot.service
 
     sudo systemctl restart containerd.service
