--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -142,6 +142,10 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
           submodules: recursive
+      - uses: actions/setup-go@0c52d547c9bc32b1aa3301fd7a9cb496313a4491 # v5.0.0
+        with:
+          go-version-file: go.mod
+          cache: true  
       - name: Set output variables
         id: vars
         run: |
@@ -167,7 +171,7 @@ jobs:
           fi
       - name: Install Rosetta 2
         run: echo "A" | softwareupdate --install-rosetta || true
-      - run: brew install go lz4 automake autoconf libtool
+      - run: brew install lz4 automake autoconf libtool
         shell: zsh {0}
       - name: Build project
         run: |
