ci: fix release workflows
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/build-and-test-msi.yaml
+++ b/.github/workflows/build-and-test-msi.yaml
@@ -250,6 +250,7 @@ jobs:
             
             git status
             git clean -f -d
+            $env:INSTALLED="true"
             make test-e2e-container
       - name: Uninstall Finch silently
         if: ${{ always() }}
