ci: reenable wastedassign linter in CI
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -49,8 +49,7 @@ linters:
     - unconvert
     - unparam
     - usestdlibvars
-    # TODO: Enable wastedassign after https://github.com/sanposhiho/wastedassign/issues/41 is fixed.
-    # - wastedassign
+    - wastedassign
     - whitespace
     - stylecheck
 issues:
