build: unify yaml where possible
Signed-off-by: Justin Alvarez <alvajus@amazon.com>

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -47,7 +47,7 @@ jobs:
           fi
       - name: Install Rosetta 2
         run: echo "A" | softwareupdate --install-rosetta || true
-      - run: brew install go lz4 automake autoconf libtool
+      - run: brew install go lz4 automake autoconf libtool yq
         shell: zsh {0}
       - name: Build project
         run: |
