--- a/.github/workflows/upload-build-to-S3.yaml
+++ b/.github/workflows/upload-build-to-S3.yaml
@@ -27,7 +27,7 @@ jobs:
           cache: true
       - name: Make macos aarch64 build
         run: |
-          brew install lz4 automake autoconf libtool
+          brew install lz4 automake autoconf libtool yq
           make clean
           make download-licenses 
           make FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch
@@ -56,7 +56,7 @@ jobs:
           cache: true
       - name: Make macos x86_64 build
         run: |
-          brew install lz4 automake autoconf libtool
+          brew install lz4 automake autoconf libtool yq
           make clean
           make download-licenses 
           make FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch
