--- a/.github/workflows/build-and-test-pkg.yaml
+++ b/.github/workflows/build-and-test-pkg.yaml
@@ -53,7 +53,7 @@ jobs:
           cache: true
       - name: Make macos aarch64 build
         run: |
-          brew install lz4 automake autoconf libtool
+          brew install lz4 automake autoconf libtool yq
           git status
           git clean -f -d
           make clean
@@ -91,7 +91,7 @@ jobs:
 
       - name: Make macos x86_64 build
         run: |
-          brew install lz4 automake autoconf libtool
+          brew install lz4 automake autoconf libtool yq
           git status
           git clean -f -d
           make clean
@@ -166,7 +166,7 @@ jobs:
         run: echo "A" | softwareupdate --install-rosetta || true 
       - name: Build project
         run: |
-          brew install lz4 automake autoconf libtool
+          brew install lz4 automake autoconf libtool yq
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           make
         shell: zsh {0}
@@ -287,7 +287,7 @@ jobs:
         run: echo "A" | softwareupdate --install-rosetta || true 
       - name: Build project
         run: |
-          brew install lz4 automake autoconf libtool
+          brew install lz4 automake autoconf libtool yq
           export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
           make
         shell: zsh {0}
