--- a/.github/workflows/build-and-test-pkg.yaml
+++ b/.github/workflows/build-and-test-pkg.yaml
@@ -38,7 +38,7 @@ jobs:
   
   macos-aarch64-pkg-build:
     needs: get-tag-name
-    runs-on: [self-hosted, macos, arm64, 11, release]
+    runs-on: [self-hosted, macos, arm64, 14, release]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
@@ -58,7 +58,10 @@ jobs:
           git clean -f -d
           make clean
           make download-licenses 
-          make FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch
+          CGO_CFLAGS="-mmacosx-version-min=11.0" \
+            CGO_LDFLAGS="-mmacosx-version-min=11.0" \
+            FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch \
+            make
         shell: zsh {0}
 
       - name: configure aws credentials
@@ -75,7 +78,7 @@ jobs:
 
   macos-x86-64-pkg-build:
     needs: get-tag-name
-    runs-on: [self-hosted, macos, amd64, 11, release]
+    runs-on: [self-hosted, macos, amd64, 14, release]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
@@ -96,7 +99,10 @@ jobs:
           git clean -f -d
           make clean
           make download-licenses 
-          make FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch
+          CGO_CFLAGS="-mmacosx-version-min=11.0" \
+            CGO_LDFLAGS="-mmacosx-version-min=11.0" \
+            FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch \
+            make
         shell: zsh {0}
 
       - name: configure aws credentials
