--- a/.github/workflows/upload-build-to-S3.yaml
+++ b/.github/workflows/upload-build-to-S3.yaml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   macos-aarch64-build:
-    runs-on: [self-hosted, macos, arm64, 11, release]
+    runs-on: [self-hosted, macos, arm64, 14, release]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
@@ -30,7 +30,10 @@ jobs:
           brew install lz4 automake autoconf libtool yq
           make clean
           make download-licenses 
-          make FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch
+          CGO_CFLAGS="-mmacosx-version-min=11.0" \
+            CGO_LDFLAGS="-mmacosx-version-min=11.0" \
+            FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch \
+            make
           tar -zcvf finch.${GITHUB_REF_NAME}.aarch64.tar.gz _output
         shell: zsh {0}
 
@@ -42,7 +45,7 @@ jobs:
           if-no-files-found: error
 
   macos-x86_64-build:
-    runs-on: [self-hosted, macos, amd64, 11, release]
+    runs-on: [self-hosted, macos, amd64, 14, release]
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
@@ -59,7 +62,10 @@ jobs:
           brew install lz4 automake autoconf libtool yq
           make clean
           make download-licenses 
-          make FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch
+          CGO_CFLAGS="-mmacosx-version-min=11.0" \
+            CGO_LDFLAGS="-mmacosx-version-min=11.0" \
+            FINCH_OS_IMAGE_LOCATION_ROOT=/Applications/Finch \
+            make
           tar -zcvf finch.${GITHUB_REF_NAME}.x86_64.tar.gz _output
         shell: zsh {0}
 
