--- a/.github/workflows/build-pkg.yaml
+++ b/.github/workflows/build-pkg.yaml
@@ -8,6 +8,9 @@ on:
       arch:
         type: string
         required: true
+      output_arch:
+        type: string
+        required: true
       version:
         type: string
         required: true
@@ -15,10 +18,6 @@ on:
         type: string
         required: true
 jobs:
-  get-output-arch:
-    uses: ./.github/workflows/pkg-output-arch.yaml
-    with:
-      arch: ${{ inputs.arch }}
   build:
     runs-on:
       [
@@ -28,8 +27,6 @@ jobs:
         '${{ inputs.arch }}',
         '${{ inputs.version }}',
       ]
-    needs:
-      - get-output-arch
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@44c2b7a8a4ea60a981eaca3cf939b5f4305c123b # v4.1.5
@@ -42,7 +39,7 @@ jobs:
         with:
           go-version-file: go.mod
           cache: true
-      - name: Build for macOS ${{ inputs.version }} (${{ needs.get-output-arch.outputs.arch }})
+      - name: Build for macOS ${{ inputs.version }} (${{ inputs.output_arch }})
         run: |
           brew install lz4 automake autoconf libtool yq
           git status
@@ -62,5 +59,12 @@ jobs:
       - id: final
         name: generate pkg
         run: |
-          ./installer-builder/tools/release-installer.sh ${{ needs.get-output-arch.outputs.arch }} ${{ inputs.tag }} ${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }} ${{ secrets.EXECUTABLE_BUCKET }} ${{ secrets.PKG_BUCKET }} ${{ secrets.NOTARIZATION_ACCOUNT }} ${{ secrets.NOTARIZATION_CREDENTIAL }}
+          ./installer-builder/tools/release-installer.sh \
+            ${{ inputs.output_arch }} \
+            ${{ inputs.tag }} \
+            ${{ secrets.INSTALLER_PRIVATE_BUCKET_NAME }} \
+            ${{ secrets.EXECUTABLE_BUCKET }} \
+            ${{ secrets.PKG_BUCKET }} \
+            ${{ secrets.NOTARIZATION_ACCOUNT }} \
+            ${{ secrets.NOTARIZATION_CREDENTIAL }}
         shell: zsh {0}
